# mongo_with_fastapi

./: AiAgentChangesLogs.md  README.md  README_zh.md  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
backend/: gunicorn_conf.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: items.py  users.py
backend/app/api/health/: __init__.py  endpoints.py
backend/app/api/v2/: __init__.py  api.py
backend/app/api/v2/endpoints/: __init__.py  items.py  users.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  observability.py  request_context.py  security.py
backend/app/crud/: __init__.py  base.py  item.py
backend/app/infra/: __init__.py  circuit_breaker.py  mongo.py  rate_limiter.py  redis_cache.py
backend/app/models/: item.py  user.py
backend/app/repositories/: __init__.py  base.py  item_repository.py  user_repository.py
backend/app/schemas/: __init__.py  common.py
backend/app/services/: __init__.py  auth_service.py  item_service.py  user_service.py
backend/app/utils/: __init__.py  mongo_util.py
backend/scripts/: start.sh
docs/perf/: baseline.md
docs/rollout/: gray-release.md
tests/: conftest.py
tests/core/: test_security.py
tests/infra/: test_circuit_breaker.py
tests/load/: k6_baseline.js
tests/repositories/: test_base.py
tests/schemas/: test_common_schemas.py  test_update_schemas.py
tests/utils/: test_identifiers.py  test_mongo_util.py  test_partial.py
